🔧 deliberately fail test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
                   "fields": [
                     {
                       "type": "plain_text",
-                      "text": "*Build validation failed for crime portal gateway*",
+                      "text": "🛑 Build validation failed for crime portal gateway",
                       "emoji": true
                     }
                   ]
