✨ PIC-850 WIP initial

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,3 +1,7 @@
+feature:
+  flags:
+    disable-auth: true
+
 spring:
   profiles:
     include: stdout
@@ -8,3 +12,5 @@ server:
 management.endpoint:
   health.cache.time-to-live: 0
   info.cache.time-to-live: 0
+
+
