✨ PIC-850 WIP initial

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,6 +73,7 @@ workflows:
             branches:
               only:
                 - main
+                - PIC-850-message-signing
           requires:
             - validate
             - build_docker
