✨PIC-850 two way message encryption

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -59,9 +59,9 @@ soap:
   xsd-file-path: /app/ExternalDocumentRequest.xsd
 
 ws-sec:
-  keystore-password: changeit
   keystore-file-path: /mnt/secrets/crime-portal-gateway-jks.key
-  inbound-encrypt-actions: "Timestamp Signature Encrypt"
+  request-encrypt-actions: "Signature Encrypt"
+  response-encrypt-actions: "Signature Encrypt"
 
 #org:
 #  apache:
