--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -1,11 +1,11 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 4
+replicaCount: 1
 
 image:
   repository: quay.io/hmpps/crime-portal-gateway
-  tag: latest
+  tag: encrypted
   port: 8081
 
 ingress:
