🔧 Fix XSD in Dockerfile

--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -5,7 +5,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/hmpps/crime-portal-gateway
-  tag: encrypted
+  tag: 0.0.2
   port: 8081
 
 ingress:
