--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,6 +60,7 @@ workflows:
             branches:
               only:
                 - main
+                - /.*deployable_branch.*/
           post-steps:
             - jira/notify:
               job_type: build
@@ -74,6 +75,7 @@ workflows:
             branches:
               only:
                 - main
+                - /.*deployable_branch.*/
           requires:
             - validate
             - build_docker
