--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -11,6 +11,7 @@ image:
 
 ingress:
   enabled: true
+  enable_whitelist: true
   hosts:
     - host: crime-portal-gateway-dev.apps.live-1.cloud-platform.service.justice.gov.uk
   path: /mirrorgateway/service/cpmgwextdocapi(/|$)(.*)
