--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -15,6 +15,8 @@ soap:
 # Localstack settings
 aws:
   sqs-endpoint-url: "http://localhost:4566"
+  sns:
+    court-case-events-topic: "arn:aws:sns:eu-west-2:000000000000:court-case-events-topic"
   region-name: eu-west-2
   access_key: foobar
   secret_access_key: foobar
