--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,9 @@ orbs:
 jobs:
   validate:
     executor:
-      name: hmpps/java
-      tag: "17.0"
+    name: hmpps/localstack
+    jdk_tag: "17.0"
+    localstack_tag: "3"
     steps:
       - checkout
       - restore_cache:
