--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
       name: hmpps/localstack
       jdk_tag: "19.0"
       localstack_tag: "3"
+      services: "sqs,sns,s3"
     steps:
       - checkout
       - restore_cache:
