Replace ContextInitialiser with custom dimension
Add custom dimenstion with BUILD_NUMBER env value to the
applicationinsights json config file.

This is because ContextInitialiser no longer works after upgrading
app insights

--- a/applicationinsights.json
+++ b/applicationinsights.json
@@ -3,6 +3,9 @@
     "name": "crime-portal-gateway",
     "instance": "crime-portal-gateway"
   },
+  "customDimensions": {
+    "service.version": "${BUILD_NUMBER}"
+  },
   "instrumentation": {
     "logging": {
       "level": "DEBUG"
