--- a/helm_deploy/crime-portal-gateway/values.yaml
+++ b/helm_deploy/crime-portal-gateway/values.yaml
@@ -16,7 +16,7 @@ generic-service:
     path: /
     annotations:
       nginx.ingress.kubernetes.io/server-snippet: |
-        location = /mirrorgateway/service/cpmgwextdocapi(/|$)(.*) {
+        location ~* /mirrorgateway/service/cpmgwextdocapi(/|$)(.*) {
           rewrite ^/mirrorgateway/service/cpmgwextdocapi(/|$)(.*) /crime-portal-gateway/ws/$2 permanent;
           break;
         }
