--- a/helm_deploy/crime-portal-gateway/Chart.yaml
+++ b/helm_deploy/crime-portal-gateway/Chart.yaml
@@ -8,3 +8,6 @@ dependencies:
   - name: generic-service
     version: 3.5.0
     repository: https://ministryofjustice.github.io/hmpps-helm-charts
+  - name: generic-prometheus-alerts
+    version: 1.9.0
+    repository: https://ministryofjustice.github.io/hmpps-helm-charts
