--- a/helm_deploy/crime-portal-gateway/values.yaml
+++ b/helm_deploy/crime-portal-gateway/values.yaml
@@ -66,3 +66,6 @@ generic-service:
   allowlist:
     groups:
       - internal
+
+  generic-prometheus-alerts:
+    targetApplication: crime-portal-gateway
