PIC-4364 Set topic_arn to FIFO SNS topic
Read from the k8s secret that contains the SNS FIFO topic_arn

--- a/helm_deploy/crime-portal-gateway/values.yaml
+++ b/helm_deploy/crime-portal-gateway/values.yaml
@@ -34,7 +34,7 @@ generic-service:
   namespace_secrets:
     crime-portal-gateway:
       APPINSIGHTS_INSTRUMENTATIONKEY: "APPINSIGHTS_INSTRUMENTATIONKEY"
-    court-case-events-topic:
+    court-cases-topic:
       HMPPS_SQS_TOPICS_COURTCASEEVENTSTOPIC_ARN: topic_arn
     crime-portal-gateway-s3-credentials:
       aws_s3_bucket_name: bucket_name
