--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -9,6 +9,7 @@ generic-service:
 
   env:
     SPRING_PROFILES_ACTIVE: "dev,logstash"
+    SENTRY_ENVIRONMENT: dev
 
   allowlist:
     bsi-1: "54.37.241.156/30"
